Updated Properties file

--- a/rmiserver/dbconnect.properties
+++ b/rmiserver/dbconnect.properties
@@ -2,3 +2,13 @@ driver=com.mysql.cj.jdbc.Driver
 url=jdbc:mysql://localhost:3306/db_name
 username=ur_username
 password=ur_pass
+speed=50
+mumbai=1380
+bangalore=400
+chennai=50
+delhi=2300
+goa=1000
+kolkata=1800
+cochin=750
+trivandrum=800
+hyderabad=700
