--- a/ShoppingApp_4.0/WebContent/WEB-INF/dbconfig.properties
+++ b/ShoppingApp_4.0/WebContent/WEB-INF/dbconfig.properties
@@ -1,4 +1,4 @@
 driver=com.mysql.cj.jdbc.Driver
-url=jdbc:mysql://localhost/ey
-username=root
-password=lufi2412
+url=jdbc:mysql://localhost/dbname
+username=uruser
+password=urpass
