--- a/SpringBasics/src/dbconnect.properties
+++ b/SpringBasics/src/dbconnect.properties
@@ -1,4 +1,4 @@
 driver=com.mysql.cj.jdbc.Driver
-url=jdbc:mysql://localhost:3306/ey
-username=root
-password=lufi2412
+url=jdbc:mysql://localhost:3306/dbname
+username=urname
+password=urpassword
